--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,50 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+}
+:root {
+  font-size: 62.5%;
+  --warning: #e5b62c;
+  --white: #fff;
+  --muted: #005249;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+body {
+  box-sizing: border-box;
+  font-size: 1.6rem;
+  min-height: 100vh;
+  line-height: 2.4rem;
+  font-family: Helvetica, sans-serif;
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+img{
+  display: block; 
+  max-width: 100%;
+}
+
+ul{
+  list-style-type: none;
+}
+
+h1 {
+  font-size: 4.5rem;
+  line-height: 5.7rem;
+}
+h2 {
+  font-size: 2.8rem;
+  line-height: 2.3rem;
+}
+h3 {
+  font-size: 2.8rem;
+  line-height: 2.3rem;
+}
+
+@media (min-width: 35em) {
+  .container {
+    padding-inline: 6.4rem;
   }
 }
+
+@import '@/styles/nav';
+@import '@/styles/footer';
