--- a/styles/card.css
+++ b/styles/card.css
@@ -66,7 +66,7 @@
       padding-block: 0.8rem;
       padding-inline: 1.6rem;
       border-radius: 1.6rem;
-      color: #ccc;
+      color: #777;
     }
 
 
