--- a/styles/card.css
+++ b/styles/card.css
@@ -14,14 +14,14 @@
       width: 1rem;
       height: 1rem;
       border-radius: 50%;
-      left: 50%; 
+      left: 50%;
       top: 50%;
       transform: translateY(-50%) translateX(-50%);
     }
     &:hover > div {
       animation-name: zoom;
       animation-fill-mode: forwards;
-      animation-duration: .5s;
+      animation-duration: 0.5s;
     }
   }
   & > div:nth-of-type(2) {
@@ -32,19 +32,15 @@
     }
 
     & > div:nth-of-type(1) {
-        display: flex; 
-        align-items: center;
-      
-    h4 {
-      color: #888;
-      font-size: 1.6rem;
-      font-weight: bold;
+      display: flex;
+      align-items: center;
+
+      h4 {
+        color: #888;
+        font-size: 1.6rem;
+        font-weight: bold;
+      }
     }
-
-}
-
-
-
 
     .enabled-btn {
       background-color: #332a2b;
@@ -54,26 +50,21 @@
       color: white;
       cursor: pointer;
       border: none;
+      font-size: 1rem;
 
       &:hover {
         background-color: var(--warning);
       }
     }
 
-
     .disabled-btn {
-      border: solid .1rem #ccc;
+      font-size: 1rem;
+      border: solid 0.1rem #ccc;
       padding-block: 0.8rem;
       padding-inline: 1.6rem;
       border-radius: 1.6rem;
       color: #777;
     }
-
-
-
-
-
-
   }
 
   & > h4 {
@@ -84,6 +75,5 @@
 @keyframes zoom {
   to {
     transform: scale(100);
-
   }
 }
