--- a/styles/cart.css
+++ b/styles/cart.css
@@ -2,8 +2,17 @@
   position: relative;
   width: 4rem;
 
+  .cart-list.show {
+    display: block;
+  }
+
+  .cart-list.hide {
+    display: none;
+  }
+
   .cart-list {
     position: absolute;
+    display: none;
     right: 0;
     top: 2.5rem;
     z-index: 9;
@@ -13,7 +22,7 @@
     padding: 1.2rem;
 
     & > div:nth-of-type(1) {
-      height: 40rem;
+      height: 30rem;
 
       overflow-y: scroll;
       table {
@@ -31,6 +40,23 @@
             }
             & > td:nth-of-type(3) {
               width: 5rem;
+              height: 5rem;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              & > span {
+                display: block;
+                font-size: 1rem;
+                width: 2rem;
+                height: 2rem;
+                border-radius: 50%;
+                background-color: #444;
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+              }
             }
           }
         }
@@ -39,8 +65,10 @@
 
     & > div:nth-of-type(2) {
       width: 100%;
-      div{
-        padding: 1.2rem;
+      div {
+        padding-block: 1.2rem;
+        font-size: 1.8rem;
+        text-align: center;
       }
 
       button {
@@ -51,6 +79,8 @@
         text-align: center;
         padding: 1.6rem;
         width: 100%;
+
+        cursor: pointer;
       }
     }
   }
@@ -63,6 +93,7 @@
     top: -1rem;
     right: 0;
     display: flex;
+    cursor: pointer;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
