--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,4 +1,3 @@
-
 @media (min-width: 35em) {
   .topbar {
     border-bottom: solid 0.1rem #ccc;
@@ -33,7 +32,6 @@
 }
 
 @media (min-width: 35em) {
-  
   .navbar.stickynav img {
     animation-name: shrinkimg;
     animation-duration: 0.9s;
@@ -85,52 +83,89 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+
       & > div:nth-of-type(1) {
         img {
           border-radius: 1.2rem;
         }
+
+        flex-basis: 10rem;
+        flex-grow: 0;
       }
 
       & > div:nth-of-type(2) {
+        flex-basis: 50rem;
+        flex-grow: 0;
         display: flex;
-        gap: 5.6rem;
-
-        & > div:nth-of-type(1) {
+        align-items: center;
+        justify-content: center;
+        & > div {
           display: flex;
-          align-items: center;
-          ul {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 3.2rem;
-            li {
-              .active {
-                background-color: var(--warning);
-                color: var(--white);
-                padding-inline: 1.6rem;
-                padding-block: 1.2rem;
-                border-radius: 0.8rem;
-              }
-              a {
-                color: var(--muted);
-                text-decoration: none;
-                color: var(--muted);
-                padding-inline: 1.6rem;
-                padding-block: 1.2rem;
-                border-radius: 0.8rem;
-                &:hover {
-                  background-color: var(--warning);
-                  color: var(--white);
-                  transition: 0.5s;
-                }
-              }
+          gap: 4.5rem;
+          & > div:nth-of-type(1) {
+            width: 30rem;
+            position: relative;
+            input {
+              width: 100%;
+              border: solid 0.1rem #444;
+              border-radius: 0.8rem;
+              height: 3.5rem;
+              padding: 0.2rem;
+              padding-left: 3.5rem;
+            }
+            input + label {
+              position: absolute;
+              top: 1.2rem;
+              left: 1rem;
+            }
+          }
+          & > div:nth-of-type(2) {
+            button {
+              outline: none;
+              border: none;
+              color: white;
+              background-color: var(--warning);
+              padding-inline: 1.6rem;
+              padding-block: 1.2rem;
+              border-radius: 0.8rem;
             }
           }
         }
+      }
 
+      & > div:nth-of-type(3) {
+        flex-basis: 10rem;
+        flex-grow: 0;
+        display: flex;
+        gap: 2.4rem;
+        .mobile-contact-box {
+          display: none;
+        }
+        & > div {
+          flex: 5rem 1 1;
+          display: flex;
+        }
+        & > div:nth-of-type(1) {
+          a {
+            display: flex;
+
+            align-items: center;
+            text-decoration: none;
+            color: var(--muted);
+          }
+        }
         & > div:nth-of-type(2) {
           display: flex;
           align-items: center;
-          font-size: 2.8rem;
+
+          color: var(--muted);
+          & > span {
+            display: block;
+            width: 2rem;
+          }
+          & > span:nth-of-type(1) {
+            margin-top: 0.5rem;
+          }
         }
       }
     }
