--- a/styles/checkout.css
+++ b/styles/checkout.css
@@ -4,17 +4,14 @@
   margin-block: 4.8rem;
   & > div {
     flex: 10rem 1 1;
-
     padding-inline: 4rem;
   }
   & > div:nth-of-type(1) {
     border-right: 0.2rem #ccc solid;
   }
-
 }
 
 .items {
-
   .items-box {
     position: relative;
     height: 30rem;
@@ -23,27 +20,25 @@
       width: 100%;
     }
 
-
-    .scroll-box.show{
+    .scroll-box.show {
       opacity: 1;
-      transition: .4s;
+      transition: 0.4s;
     }
-    .scroll-box.hide{
+    .scroll-box.hide {
       opacity: 0;
-      transition: .4s;
+      transition: 0.4s;
     }
 
-    .scroll-box{
-
+    .scroll-box {
       opacity: 0;
-      position: absolute; 
-      top: 70%; 
-      left: 50%; 
+      position: absolute;
+      top: 70%;
+      left: 50%;
       transform: translateX(-50%) translateY(-50%);
       background-color: #444;
       color: white;
       padding-inline: 1.6rem;
-      padding-block: .8rem;
+      padding-block: 0.8rem;
     }
 
     & > table tbody tr td:nth-of-type(1) {
@@ -51,33 +46,14 @@
       position: relative;
       & > div {
         height: 7rem;
-        & > div {
-          position: absolute;
-          z-index: 99;
-          width: 2rem;
-          height: 2rem;
-          color: white;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background-color: #444;
-          border-radius: 50%;
-          bottom: .4rem;
-          left: .4rem;
-          padding: 0.8rem;
-        }
+        border-radius: 1.2rem;
       }
     }
     & > table tbody tr td:nth-of-type(2) {
       width: 60%;
-      padding: .8rem;
-      & > div{
-        display: flex;
-        gap: 1.6rem; 
-        margin-top: .8rem;
-        input{
-          width: 4rem;
-        }
+      padding: 0.8rem;
+      & > div {
+        background-color: yellow;
       }
     }
     & > table tbody tr td:nth-of-type(3) {
